# pgdtools

./: .bumpversion.cfg  .flake8  .gitignore  .justfile  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  coverage.xml  dev-requirements.txt  mkdocs.yml  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: db_test.yml  pypi-publish.yml  rimseval_testing.yml  tests.yml
database/: README.md  db.json  pgd_references.bib  references.json  sic.txt  techniques.json
docs/: changelog.md  conf.py  index.md  index.rst  license.rst
docs/api/: classify.md  db.md  maintainer.md  pgdtools.md  subtools.md
docs/db_maintainer/: pds.rst
docs/examples/: sic_m_gce.ipynb  sic_mo_stephan.ipynb
docs/maintainer/: db_addition.md  db_addition.rst  overview.md  overview.rst  pds.rst
docs/users/: classify.md  db.md  db.rst  install.md  install.rst  pgd.md
examples/: ruthenium_example.ipynb  silicon_example.py  titanium_example.py
pgdtools/: __init__.py  classify.py  pgdtools.py  utilities.py
pgdtools/data/: __init__.py  pgd_library_id_doi_olafkey.csv
pgdtools/db/: __init__.py  config.py  management.py  setup_local.py
pgdtools/maintainer/: __init__.py  excel_tools.py
pgdtools/pds/: README.md  __init__.py  bibparser.py  olaf.py  pgd_library_olaf.txt  pgd_library_olaf_left_to_do.txt  tmp_keyfile.csv
src/pgdtools/: __init__.py  _version.py  classify.py  pgdtools.py  utilities.py
src/pgdtools/data/: __init__.py
src/pgdtools/db/: management.py
src/pgdtools/maintainer/: __init__.py  excel_tools.py
src/pgdtools/sub_tools/: __init__.py  data.py  filters.py  format.py  grain.py  headers.py  info.py  references.py  techniques.py  utilities.py
stardustlib/: __init__.py  stardustlib.py
test_database/: README.md  __init__.py  conftest.py  pytest.ini  test_integrity.py
tests/: __init__.py  conftest.py  test_classify.py  test_pgdtools.py
tests/data_files/: PGD_Gra_2024-05-13.csv  PGD_Gra_2024-05-13.xlsx  PGD_SiC_2023-07-22.xlsx  PGD_SiC_2025-03-10.xlsx  db.json  references.json  techniques.json
tests/pds/: __init__.py  test_bibparser.py
tests/pgdtools/: __init__.py  conftest.py  test_classify.py  test_pgdtools.py
tests/pgdtools/pds/: test_bibparser.py
tests/test_data/: __init__.py  test_urls.py
tests/test_database/: __init__.py  conftest.py  test_integrity.py
tests/test_database/files/: sic_cell_shift.csv  sic_cell_shift_added_data.csv  sic_deletion_wo_mod.csv  sic_diff_nof_col.csv  sic_modified_correct.csv  sic_modified_deletion_w_mod.csv  sic_original.csv
tests/test_db/: __init__.py  conftest.py  test_config.py  test_management.py  test_setup_local.py
tests/test_maintainer/: __init__.py  conftest.py  test_excel_tools.py
tests/test_maintainer/data_files/: db.json
tests/test_sub_tools/: test_data.py  test_filters.py  test_format.py  test_grain.py  test_headers.py  test_information.py  test_references.py  test_techniques.py  test_utilities.py
