[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "pgdtools"
authors = [
    {name="Reto Trappitsch", email="reto@galactic-forensics.space"}
]
dependencies = [
    "iniabu>=1.1.2",
    "matplotlib",
    "pandas",
    "numpy",
    "requests",
    "scipy",
]
readme = "README.md"
requires-python=">=3.8,<3.12"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/galactic-forensics/pgdtools"
Documentation = "https://pgdtools.readthedocs.io"

[project.optional-dependencies]
dev = [
    "darglint>=1.5.1",
    "flake8>=4,<5",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-import-order",
    "bandit==1.7.2",
    "hypothesis",
    "pytest>=6.0.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "requests-mock"
]

maintainer = [
    "bibtexparser",
    "openpyxl"
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid"
]

[tool.flit.sdist]
exclude = [".gitignore", ".coverage", ".readthedocs.yaml"]

[tool.setuptools_scm]
write_to = "pgdtools/_version.py"
