[project]
name = "pgdtools"
version = "0.0.1"
description = "Read and interact with the presolar grain database with python."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "iniabu>=1.1.2",
    "matplotlib>=3.7.4",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
Source = "https://github.com/galactic-forensics/pgdtools"
Documentation = "https://pgdtools.readthedocs.io"

[project.optional-dependencies]
maintainer = [
    "bibtexparser>=1.4.1",
    "openpyxl>=3.1.2",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx_rtd_theme>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.1",
    "hypothesis>=6.98.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
]

[tool.rye.scripts]
test = "pytest"
test_cov = "pytest --cov=pgdtools --cov-report xml"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pgdtools"]

[tool.pytest]
testpaths = "tests"
addopts = "--cov=pgdtools -v"
