[project]
name = "pgdtools"
version = "0.2.0"
description = "Read and interact with the presolar grain database with python."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "iniabu>=1.1.2",
    "matplotlib>=3.7.4",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.urls]
Source = "https://github.com/galactic-forensics/pgdtools"
Documentation = "https://pgdtools.readthedocs.io"

[project.optional-dependencies]
maintainer = [
    "bibtexparser>=1.4.1",
    "openpyxl>=3.1.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.25",
    "mkdocs-jupyter>=0.24.8",
    "notebook>=7.2.1",
    "ceresfit>=0.3.1",
    "mkdocstrings[python]>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "hypothesis>=6.98.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    "ruff>=0.11.2",
    "xdoctest>=1.1.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pgdtools"]

[tool.pytest]
testpaths = "tests"
addopts = "--cov=pgdtools -v"
